objects/PrivatePlacementRequest__c.object
<CustomObject>
    <fields>
        <fullName>AccreditedInvestor__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checked by user if this request is justified by the Firm Office being an Accredited Investor</description>
        <inlineHelpText>Please confirm this justification using the descriptions that appear after saving the record</inlineHelpText>
        <label>Accredited Investor</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ApprovalDate__c</fullName>
        <description>The date that the request was approved; set by approval process</description>
        <label>Approval Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ApprovalStatus__c</fullName>
        <description>The current approval status of the private placement request</description>
        <label>Approval Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                    <default>true</default>
                    <label>Draft</label>
                </value>
                <value>
                    <fullName>Under Review</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Expired</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ExpirationDate__c</fullName>
        <description>Date when approval expires</description>
        <label>Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FirmType__c</fullName>
        <formula>FirmOffice__r.RecordType.DeveloperName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Firm/Office Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MyRequest__c</fullName>
        <formula>IF( Requestor__r.Id =  $User.Id , TRUE, FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>My Request</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QualifiedPurchaser__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checked by user if this request is justified by the Firm Office being a Qualified Purchaser</description>
        <inlineHelpText>Please confirm this justification using the descriptions that appear after saving the record</inlineHelpText>
        <label>Qualified Purchaser</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RepresentsIndividuals__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checked by user if this request is for a consultant and the consultant represents individuals</description>
        <label>Represents Individuals</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RepresentsInstitutions__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checked by user if this request is for a consultant and the consultant represents investors</description>
        <label>Represents Institutions</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Requestor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Used for email alert.  Specifically added because there is no way to load "created by" and there is no owner on this field since it is MD with Account.  Needed primarily for initial data conversion.</description>
        <label>Requestor</label>
        <referenceTo>User</referenceTo>
        <relationshipName>PrivatePlacementRequests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SophisticatedInvestor__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checked by user if this request is justified by the Firm Office being an Sophisticated Investor</description>
        <inlineHelpText>Please confirm this justification using the descriptions that appear after saving the record</inlineHelpText>
        <label>Sophisticated Investor</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FirmOffice__c</fullName>
        <label>Firm Office</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Private Placements are only authorized for accounts at the Branch or Home Office level</errorMessage>
            <filterItems>
                <field>Account.RecordType.Name</field>
                <operation>equals</operation>
                <value>Office</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Private Placement Requests</relationshipLabel>
        <relationshipName>Private_Placement_Requests</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <description>Used to track private placement requests and approvals.  Approved private placement requests allow a firm and its contacts to purchase private placement products.</description>
    <label>Private Placement Request</label>
    <nameField>
        <displayFormat>PPR-{000000}</displayFormat>
        <label>Reference #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Private Placement Requests</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>My_Private_Placement_Req_All</fullName>
        <columns>NAME</columns>
        <columns>FirmOffice__c</columns>
        <columns>FirmType__c</columns>
        <columns>ApprovalStatus__c</columns>
        <columns>ApprovalDate__c</columns>
        <columns>ExpirationDate__c</columns>
        <filterScope>Mine</filterScope>
        <label>My Private Placement Req - All</label>
    </listViews>
    <listViews>
        <fullName>My_Private_Placement_Req_Approved</fullName>
        <columns>NAME</columns>
        <columns>FirmOffice__c</columns>
        <columns>FirmType__c</columns>
        <columns>ApprovalStatus__c</columns>
        <columns>ApprovalDate__c</columns>
        <columns>ExpirationDate__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>ApprovalStatus__c</field>
            <operation>equals</operation>
            <value>Approved</value>
        </filters>
        <label>My Private Placement Req - Approved</label>
    </listViews>
    <listViews>
        <fullName>My_Private_Placement_Req_Draft</fullName>
        <columns>NAME</columns>
        <columns>FirmOffice__c</columns>
        <columns>FirmType__c</columns>
        <columns>ApprovalStatus__c</columns>
        <columns>ApprovalDate__c</columns>
        <columns>ExpirationDate__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>ApprovalStatus__c</field>
            <operation>equals</operation>
            <value>Draft</value>
        </filters>
        <label>My Private Placement Req - Draft</label>
    </listViews>
    <listViews>
        <fullName>My_Private_Placement_Req_Expired</fullName>
        <columns>NAME</columns>
        <columns>FirmOffice__c</columns>
        <columns>FirmType__c</columns>
        <columns>ApprovalStatus__c</columns>
        <columns>ApprovalDate__c</columns>
        <columns>ExpirationDate__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>ApprovalStatus__c</field>
            <operation>equals</operation>
            <value>Expired</value>
        </filters>
        <label>My Private Placement Req - Expired</label>
    </listViews>
    <listViews>
        <fullName>My_Private_Placement_Req_Expiring_Soon</fullName>
        <columns>NAME</columns>
        <columns>FirmOffice__c</columns>
        <columns>FirmType__c</columns>
        <columns>ApprovalStatus__c</columns>
        <columns>ApprovalDate__c</columns>
        <columns>ExpirationDate__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>ExpirationDate__c</field>
            <operation>equals</operation>
            <value>NEXT_N_DAYS:30</value>
        </filters>
        <filters>
            <field>ApprovalStatus__c</field>
            <operation>equals</operation>
            <value>Approved</value>
        </filters>
        <label>My Private Placement Req - Expiring Soon</label>
    </listViews>
    <listViews>
        <fullName>My_Private_Placement_Req_Under_Review</fullName>
        <columns>NAME</columns>
        <columns>FirmOffice__c</columns>
        <columns>FirmType__c</columns>
        <columns>ApprovalStatus__c</columns>
        <columns>ApprovalDate__c</columns>
        <columns>ExpirationDate__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>ApprovalStatus__c</field>
            <operation>equals</operation>
            <value>Under Review</value>
        </filters>
        <label>My Private Placement Req - Under Review</label>
    </listViews>
    <validationRules>
        <fullName>Consultant_Required_Fields</fullName>
        <active>true</active>
        <description>If the firm office is type of consultant, the user must provide either Represents Investors or Represents Individuals or both.</description>
        <errorConditionFormula>(FirmOffice__r.RecordType.DeveloperName = "Consultant") &amp;&amp;
NOT( RepresentsIndividuals__c ) &amp;&amp;
NOT( RepresentsInstitutions__c )</errorConditionFormula>
        <errorMessage>This Firm Office is categorized as a Consultant.  Please indicate whether the consultant represents individuals or investors or both.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Firm_Types_Not_Allowed</fullName>
        <active>true</active>
        <description>Limits the firm types for which a private placement may be requested.</description>
        <errorConditionFormula>TEXT(FirmOffice__r.Type) &lt;&gt; "Home" &amp;&amp;
TEXT(FirmOffice__r.Type) &lt;&gt; "Branch" &amp;&amp;
TEXT(FirmOffice__r.Type) &lt;&gt; "Consultant"</errorConditionFormula>
        <errorMessage>You may only request private placement approval for Firm Types of Home, Branch, or Consultant.  Please change the Firm for which you are requesting approval or cancel this request.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>One_Justification_Required</fullName>
        <active>true</active>
        <description>At least one Justification checkbox must be on</description>
        <errorConditionFormula>NOT( AccreditedInvestor__c ) &amp;&amp; NOT( QualifiedPurchaser__c ) &amp;&amp; NOT( SophisticatedInvestor__c )</errorConditionFormula>
        <errorMessage>You must choose at least one Justification</errorMessage>
    </validationRules>
</CustomObject>